<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyManager</string>
    <string name="footer">Developed by : Gustavo Souza</string>
    <string name="nome_busca">Por Nome</string>
    <string name="rg_busca">Por RG</string>
    <string name="cpf_busca">Por CPF</string>
    <string name="num_implurb_busca">Nº Implurb</string>
    <string name="faca_busca">Digite Aqui o Valor Para Busca</string>
    <string name="valor_busca">Digite o Valor Para a Busca</string>
    <string name="nome_lista">Lista de Bancas</string>
    <string name="lista_auxiliares">Listar Auxiliar</string>
    <string name="wellcome">Gerenciador Camelodromo</string>
    <string name="sair">Sair</string>
    <string name="editar">Editar Dados</string>
    <string name="ligar">Ligar</string>
    <string name="excluir">Excluir</string>
    <string name="salvar">Salvar</string>
    <string name="buscar">Buscar</string>
    <string name="action_settings">Settings</string>
    <string name="menu_novo">Novo</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_novo_micro_empreendedor">MicroEmpreendedor</string>
    <string name="menu_novo_auxiliar">Auxiliar</string>
    <string name="menu_novo_banca">Banca</string>
    <string name="title_activity_lista_bancas">Lista Bancas</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="voltar">Sair</string>
    <string name="microEmpreendedor">Responsável Pela Banca</string>
    <string name="bancaEmpreendedor">MicroEmpreendedor</string>
    <string name="numero_banca">Nº Banca</string>
    <string name="select_banca">Selecione A Banca</string>
    <string name="tipo_banca">Atividade da Banca</string>
    <string name="title_activity_busca_empreendedor">Busca Empreendedor</string>
    <string name="title_activity_cadastro_empreendedor">Cadastro Empreendedor</string>
    <string name="foto_pessoa">Foto Pessoa</string>
    <string name="title_activity_cadastro_auxiliar">Cadastro Auxiliar</string>
    <string name="busca_selecao">Filtre o Tipo de Busca</string>
    <string name="busca">Buscar Empreendedor</string>
    <string name="freq">Marcar Frequência</string>
    <string name="title_activity_add_telefone">MainActivity</string>
    <string name="addTelefoneImagem">adiciona telefone</string>
    <string name="operadora">Operadora</string>
    <string name="concluir">Concluir</string>
    <string name="cadastro">Cadastrar</string>
    <string name="ocorrencia">Gerar Ocorrencia</string>
    <string name="relatorio">Gerar Relatorios</string>
    <string name="separator">sparador</string>
    <string name="mais_opcoes">opcoes</string>
    <string name="cpf_hint">CPF Apenas Numeros S/ Pontos</string>
    <string name="cpf_cadastro">CPF</string>
    <string name="nome_cadastro">Nome</string>
    <string name="nome_hint">Nome da Pessoa</string>
    <string name="rg_cadastro">Rg</string>
    <string name="rg_hint">Rg da Pessoa</string>
    <string name="numero_implurb">Numero IMPLURB</string>
    <string name="add_auxiliar">Adicionar Auxiliar</string>
    <string name="add_telefone">Adicionar Telefone</string>
    <string name="add_endereco">Adicionar Endereço</string>
    <string name="cep">Cep</string>
    <string name="cep_hint">CEP</string>
    <string name="rua">Rua</string>
    <string name="rua_hint">Insira a Rua Aqui</string>
    <string name="numero">Numero</string>
    <string name="numero_hint">Nº Casa</string>
    <string name="complemento">Complemento</string>
    <string name="complemento_hint">Complemento</string>
    <string name="ocorrencia_hint">Digite os Detalhes da Ocorrência</string>
    <string name="referencia">Ponto de Referência</string>
    <string name="referencia_hint">Ex: Prox. a algum lugar</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">UF</string>
    <string name="title_activity_adiciona_telefone">AdicionaTelefoneActivity</string>
    <string name="title_activity_gerar_ocorrencia">Gerar Ocorrência</string>
    <string name="hello_world">Hello world!</string>
	<string name="anexo">nada aqui</string>
	<string name="gerar_ocorrencia">Gerar</string>
</resources>
