<LinearLayout  
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<LinearLayout  
   
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView 
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="2"
		android:text="@string/bairro"/>
     <TextView 
	     android:layout_width="0dp"
	     android:layout_height="wrap_content"
	     android:layout_weight="2"
	     android:text="@string/cidade"/>
    <TextView 
	     android:layout_width="0dp"
	     android:layout_height="wrap_content"
	     android:layout_weight="1"
	     android:text="@string/estado"/>
</LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <EditText 
        android:id="@+id/edBairro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/bairro"
        android:layout_weight="2"/>
    <EditText 
        android:id="@+id/edCidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cidade"
        android:layout_weight="2"/>
    <EditText 
        android:id="@+id/edEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/estado"
        android:layout_weight="1"/>
</LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView 
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="2"
		android:text="@string/rua"/>
    <TextView 
      	 android:layout_width="0dp"
	     android:layout_height="wrap_content"
	     android:layout_weight="1"
	     android:text="@string/cep"/>
</LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

	<EditText 
		android:id="@+id/edRua"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="2"
		android:hint="@string/rua_hint"
		android:inputType="text"/>
	<EditText 
		android:id="@+id/edCep"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:maxLength="8"
		android:layout_weight="1"
		android:hint="@string/cep_hint"
		android:inputType="number"/>
</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <TextView 
		     android:layout_width="0dp"
		     android:layout_height="wrap_content"
		     android:layout_weight="1"
		     android:text="@string/numero"/>
	    <TextView 
		     android:layout_width="0dp"
		     android:layout_height="wrap_content"
		     android:layout_weight="2"
		     android:text="@string/complemento"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:baselineAligned="true">
	    <EditText 
		     android:id="@+id/edNumero"
		     android:layout_width="0dp"
		     android:layout_height="match_parent"
		     android:maxLength="9"
		     android:inputType="number"
		     android:hint="@string/numero_hint"
		     android:layout_weight="1"/>
	    <EditText 
		     android:id="@+id/edComplemento"
		     android:layout_width="0dp"
		     android:layout_height="wrap_content"
		     android:hint="@string/complemento_hint"
		     android:layout_weight="2"/>
	</LinearLayout>
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/referencia"/>
	<EditText 
	    android:id="@+id/edPontoReferencia"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/referencia_hint"/>
	<ListView 
	    android:id="@+id/lvEndereco"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1">
	    
	</ListView>
	<Button 
	    android:id="@+id/btSalvarEndereco"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/concluir"
	    android:layout_gravity="center"/>
	</LinearLayout>