<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">
	    <TextView
	        style="@style/titulo1"
	        android:layout_marginTop="10dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/wellcome" />
	    <ImageView 
	        android:layout_width="match_parent"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_height="6dp"
	        android:src="@drawable/separator"
	        android:contentDescription="@string/separator"/>
	</LinearLayout>
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
       <LinearLayout 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <Button 
			    android:id="@+id/btFrequencia"
			    android:layout_width="220dp"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
				style="@style/defaultMenuButtom"
			    android:layout_marginBottom="30dp"
			    android:text="@string/freq"/>
			<Button 
			    android:id="@+id/btCadastrar"
			    android:layout_width="220dp"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
				style="@style/defaultMenuButtom"
			    android:layout_marginBottom="30dp"
			    android:text="@string/cadastro"/>
			<Button 
			    android:id="@+id/btBuscar"
				android:layout_width="220dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				style="@style/defaultMenuButtom"
				android:layout_marginBottom="30dp"
				android:text="@string/buscar"/>
			<Button 
			    android:id="@+id/btGerarOcorrencia"
				android:layout_width="220dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				style="@style/defaultMenuButtom"
				android:layout_marginBottom="30dp"
				android:text="@string/ocorrencia"
				/>
			<Button 
				android:layout_width="220dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/relatorio"
				style="@style/defaultMenuButtom"/>
		</LinearLayout>
	</ScrollView>
	<include
	    android:layout_height="0dp"
	    android:layout_weight="1"  
	    layout="@layout/footer"/>
</LinearLayout>

