<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:drawableLeft="@drawable/ic_buscar"
	    android:text="@string/anexo"/>
   <EditText
       android:id="@+id/edOcorrencia" 
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="4"
       android:drawableLeft="@drawable/ic_cadastrar"
       android:hint="@string/ocorrencia_hint"/>
	<Button 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/salvar"/>
</LinearLayout>
