<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
  <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
		<TextView 
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    style="@style/defaultTextView"
		    android:text="@string/operadora"/>
		<TextView 
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			style="@style/defaultTextView"
			android:layout_weight="2"
			android:text="@string/add_telefone"/>
    </LinearLayout>
   	<LinearLayout 
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:orientation="horizontal"
   	    android:baselineAligned="true">
		<Spinner 
		    android:id="@+id/spOperadora"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"/>
	    <EditText 
	        android:id="@+id/edAddTelefone"
	        android:layout_width="0dp"
	        style="@style/defaultTextView"
	        android:layout_height="match_parent"
	        android:layout_weight="2"
	        android:maxLength="8"
	        android:inputType="phone"/>
	    <ImageView 
	        android:id="@+id/imAddTelefone"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_receber"
	        android:contentDescription="@string/addTelefoneImagem"/>
    </LinearLayout>
	<ListView 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:id="@+id/lvTelefones" >
	</ListView>
	<Button 
	    android:id="@+id/btSalvar"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/salvar"
	    style="@style/defaultMenuButtom"
	    android:layout_gravity="center"/>
    

</LinearLayout>
